fin du TP1 et TP2

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,10 +9,10 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>SALUT MEC ! ✅</h1>
+    <h1>Bucket-List</h1>
 
     <div>
-        <p>Bucket-list :</p>
+        <p>Ceci est la page d'accueil !</p>
     </div>
 
 </div>
