--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,14 +2,18 @@
 
 {% block title %}Hello HomeController!{% endblock %}
 
+{% block header %}
+    <div class="example-wrapper">
+        <h1>Bucket-List</h1>
+        <p>Home</p>
+    </div>
+
+{% endblock %}
+
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
 <div class="example-wrapper">
-    <h1>Bucket-List</h1>
+
 
     <div>
         <p>Ceci est la page d'accueil !</p>
