fin du TP1 et TP2

--- a/public/style.css
+++ b/public/style.css
@@ -3,3 +3,20 @@
 
 .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
 .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+
+.logobucket {width: 2rem; }
+
+header {
+    background-color:  #E74646;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+body {background-color:  #FFE5CA;
+    margin : 0%;
+    padding : 0%;
+}
+
+footer {
+    background-color: #FA9884;
+}
