--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block header %}
     <div class="example-wrapper">
-        <h1>Bucket-List</h1>
+        <h1><img src="{{ asset('image/logo-512.png') }}" alt="" class="logobucket">Bucket-List</h1>
         <p>Home</p>
     </div>
 
@@ -20,4 +20,10 @@
     </div>
 
 </div>
+{% endblock %}
+
+{% block footer %}
+    <div class="example-wrapper">
+        <p>&copy</p>
+    </div>
 {% endblock %}
