--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" href="{{ asset('style.css') }}">
+        <link rel="shortcut icon" href="{{ asset('image/favicon.png') }}" type="image/x-icon">
         <link rel="icon" href="">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
@@ -20,4 +21,7 @@
     <body>
         {% block body %}{% endblock %}
     </body>
+    <footer>
+        {% block footer %}{% endblock %}
+    </footer>
 </html>
