fin du TP1 et TP2

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -24,6 +24,8 @@
 
 {% block footer %}
     <div class="example-wrapper">
-        <p>&copy</p>
+        <p>&copy Bucket-list</p>
+
+        <p>{{ date }}</p>
     </div>
 {% endblock %}
