fin du TP1 et TP2

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -30,8 +30,7 @@
 
 {% block footer %}
     <div class="example-wrapper" id="divfooter">
-        <div><p>&copy Bucket-list</p></div>
+        <div><p>&copy Bucket-list {{ date }}</p></div>
 
-        <div><p>{{ date }}</p></div>
     </div>
 {% endblock %}
