fin du TP1 et TP2

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,8 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="">Home</a>
+                            <a href="/">Home</a>
+                            <a href="/about_us">About us</a>
                         </li>
                     </ul>
                 </nav>
