--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,13 +18,14 @@ body {
 }
 
 
-ul>li{
-    list-style-type: none;
-}
-
-a {
+nav>ul>li>a {
+    padding-left: 10px;
     text-decoration: none;
     color: black;
+}
+
+ul>li{
+    list-style-type: none;
 }
 
 a:hover{
