--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,7 @@
                     <ul>
                         <li>
                             <a href="/">Home</a>
+                            <a href="/wish"></a>
                             <a href="/about_us">About us</a>
                         </li>
                     </ul>
