fin du TP1 et TP2

--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}
 
+
+{% block list %}
+    <a href="{{ path('wish_wisheswish_list') }}">Detail</a>
 {% endblock %}
-
-{% block body %}
-
+{% block detail %}
+    <a href="{{ path('wish_wisheswish_detail') }}">List</a>
 {% endblock %}
-
