--- a/templates/wish/list.html.twig
+++ b/templates/wish/list.html.twig
@@ -1,10 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
 
+
+{% block list %}
+    <a href="{{ path('wish_wisheswish_list') }}">Detail</a>
 {% endblock %}
 
-{% block title %}
-
+{% block detail %}
+    <a href="{{ path('wish_wisheswish_detail') }}">List</a>
 {% endblock %}
-
