--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,9 +18,11 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="/">Home</a>
-                            <a href="/wish">All wishes</a>
-                            <a href="/about_us">About us</a>
+                            <a href="{{ path('main_home') }}">Home</a>
+                            <a href="{{ path('wish_wisheswish_wish') }}">All wishes</a>
+                            <a href="{{ path('main_about_us') }}">About us</a>
+                            {% block list %}{% endblock %}
+                            {% block detail %}{% endblock %}
                         </li>
                     </ul>
                 </nav>
