fin du TP1 et TP2

--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -3,8 +3,8 @@
 
 
 {% block list %}
-    <a href="{{ path('wish_wisheswish_list') }}">Detail</a>
+    <a href="{{ path('wish_wisheswish_list') }}">List</a>
 {% endblock %}
 {% block detail %}
-    <a href="{{ path('wish_wisheswish_detail') }}">List</a>
+    <a href="{{ path('wish_wisheswish_detail') }}">Detail</a>
 {% endblock %}
