--- a/templates/wish/list.html.twig
+++ b/templates/wish/list.html.twig
@@ -3,9 +3,9 @@
 
 
 {% block list %}
-    <a href="{{ path('wish_wisheswish_list') }}">Detail</a>
+    <a href="{{ path('wish_wisheswish_list') }}">List</a>
 {% endblock %}
 
 {% block detail %}
-    <a href="{{ path('wish_wisheswish_detail') }}">List</a>
+    <a href="{{ path('wish_wisheswish_detail') }}">Detail</a>
 {% endblock %}
