--- a/templates/wish/list.html.twig
+++ b/templates/wish/list.html.twig
@@ -1,11 +1,10 @@
 {% extends 'base.html.twig' %}
 
 
-
 {% block list %}
-    <a href="{{ path('wish_wisheswish_list') }}">List</a>
+    <a href="{{ path('wish_list') }}">List</a>
 {% endblock %}
 
 {% block detail %}
-    <a href="{{ path('wish_wisheswish_detail') }}">Detail</a>
+    <a href="{{ path('wish_detail') }}">Detail</a>
 {% endblock %}
