--- a/templates/wish/wishes.html.twig
+++ b/templates/wish/wishes.html.twig
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block detail %}
-    <a href="{{ path('wish_detail') }}">Detail</a>
+{#    <a href="{{ path('wish_detail') }}">Detail</a>#}
 {% endblock %}
