--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -6,5 +6,10 @@
     <a href="{{ path('wish_list') }}">List</a>
 {% endblock %}
 {% block detail %}
-    <a href="{{ path('wish_detail') }}">Detail</a>
+
+        <p>{{ wish.author }}</p>
+        <p>{{ wish.dateCreated | date }}</p>
+        <p>{{ wish.description }}</p>
+
+
 {% endblock %}
