--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,8 +21,8 @@
                             <a href="{{ path('main_home') }}">Home</a>
                             <a href="{{ path('wish_wish') }}">All wishes</a>
                             <a href="{{ path('main_about_us') }}">About us</a>
+                            <a href="{{ path('/wish_ajouter') }}"></a>
                             {% block list %}{% endblock %}
-                            {% block detail %}{% endblock %}
                         </li>
                     </ul>
                 </nav>
