fin du TP1 et TP2

--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -5,7 +5,7 @@
 {% block list %}
     <a href="{{ path('wish_list') }}">List</a>
 {% endblock %}
-{% block detail %}
+{% block body %}
 
         <p>{{ wish.author }}</p>
         <p>{{ wish.dateCreated | date }}</p>
