--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
                             <a href="{{ path('main_home') }}">Home</a>
                             <a href="{{ path('wish_wish') }}">All wishes</a>
                             <a href="{{ path('main_about_us') }}">About us</a>
-                            <a href="{{ path('/wish_ajouter') }}"></a>
+                            <a href="{{ path('wish_ajouter') }}">Ajout d'idée</a>
                             {% block list %}{% endblock %}
                         </li>
                     </ul>
