mise a jour du fichier

--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -6,7 +6,7 @@
     <a href="{{ path('wish_list') }}">List</a>
 {% endblock %}
 {% block body %}
-
+        <p>{{ wish.title }}</p>
         <p>{{ wish.author }}</p>
         <p>{{ wish.dateCreated | date }}</p>
         <p>{{ wish.description }}</p>
