--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,13 @@
             </div>
         </header>
         <main>
+            {% for label, messages in app.flashes %}
+                {% for message in messages %}
+                    <div class="flash-{{ label }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
             {% block body %}{% endblock %}
         </main>
 
