mise a jour du fichier

--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -10,6 +10,6 @@
         <p>{{ wish.author }}</p>
         <p>{{ wish.dateCreated | date }}</p>
         <p>{{ wish.description }}</p>
-
+        <p>{{ wish.category.name }}</p>
 
 {% endblock %}
