--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,3 +49,9 @@ footer {
     justify-content: center;
 
 }
+
+.formAjout {
+    background-color: #3b82f6;
+    border-radius: 50px;
+    width: 500px;
+}
