mise a jour du fichier

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,26 @@
 
 
 
-.example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-.example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+.example-wrapper {
+    margin: 1em auto;
+    max-width: 800px;
+    width: 95%;
+    font: 18px/1.5 sans-serif;
+}
 
-.logobucket {width: 2rem; }
+.example-wrapper code {
+    background: #F5F5F5;
+    padding: 2px 6px;
+}
+
+.logobucket {
+    width: 2rem;
+}
 
 header {
     background-color:  #9384D1;
     padding-top: 5px;
-    padding-bottom: 5px;
+    padding-bottom: 30px;
 }
 
 body {
@@ -19,7 +30,6 @@ body {
 
 
 nav>ul>li>a {
-    padding-left: 10px;
     text-decoration: none;
     color: black;
 }
@@ -29,7 +39,6 @@ ul>li{
 }
 
 a:hover{
-
     color: blue;
 }
 
@@ -51,7 +60,12 @@ footer {
 }
 
 .formAjout {
-    background-color: #3b82f6;
     border-radius: 50px;
     width: 500px;
+}
+
+.connexionDeco {
+   padding-left: 900px;
+    margin-top: -25px;
+    margin-bottom: 20px;
 }
