--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -5,9 +5,10 @@
 {% block list %}
     <a href="{{ path('wish_list') }}">List</a>
 {% endblock %}
+
 {% block body %}
         <p>{{ wish.title }}</p>
-        <p>{{ wish.author }}</p>
+        <p>{{ wish.author.pseudo }}</p>
         <p>{{ wish.dateCreated | date }}</p>
         <p>{{ wish.description }}</p>
         <p>{{ wish.category.name }}</p>
