--- a/templates/wish/ajouter.html.twig
+++ b/templates/wish/ajouter.html.twig
@@ -1,8 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block list %}
-
+{% block head %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('../public/css/style.css') }}">
 {% endblock %}
+
 
 {% block body %}
 {{ form(listeForm) }}
